tests/NormalTests/paczka1/small_fuzzy/63294557.err
Error in line 11: WJoWcaQ A485 -2,7
Error in line 7: btLdH770 S371 68,2
Error in line 14: Ttd7AET A<85 1<,8
